--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - docker build -t devmrseo/react-test-app -f ./frontend/Dockerfile.dev ./frontend
 
 script:
-  - docker run -e CI=true afashs/react-test-app npm run test
+  - docker run -e CI=true devmrseo/react-test-app npm run test
 
 after_success:
   - docker build -t devmrseo/docker-frontend ./frontend
